Создано с помощью Colaboratory

--- a/Untitled5678.ipynb
+++ b/Untitled5678.ipynb
@@ -5,8 +5,6 @@
     "colab": {
       "name": "Untitled4.ipynb",
       "provenance": [],
-      "mount_file_id": "https://github.com/s4kh4rov/BMIL/blob/master/Untitled4.ipynb",
-      "authorship_tag": "ABX9TyPgCkCn9g/i3q4LIDqFKo8a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "d5d-IUNu-b7Y"
       },
@@ -54,6 +52,8 @@
         "from torchvision import transforms\n",
         "from torch.utils.data import Dataset\n",
         "from torchvision.utils import draw_bounding_boxes\n",
+        "from torch import nn\n",
+        "import torch.nn.functional as F\n",
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
       ]
@@ -94,7 +94,7 @@
       "metadata": {
         "id": "Vpcg3Dqn-6-g"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -112,7 +112,7 @@
       "metadata": {
         "id": "jgA_kEXy_A3w"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -140,7 +140,7 @@
       "metadata": {
         "id": "EPT2QZvL_G6F"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -182,7 +182,7 @@
       "metadata": {
         "id": "ihV0TaYl_IvJ"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -238,7 +238,7 @@
       "metadata": {
         "id": "ZADhi8NOF9Xa"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -292,17 +292,75 @@
         "    params = [p for p in model.parameters() if p.requires_grad]\n",
         "    optimizer = torch.optim.SGD(params, lr=0.005,\n",
         "                                momentum=0.9, weight_decay=0.0005)\n",
+        "    criterion = nn.BCELoss(size_average=True)\n",
         "    \n",
         "\n",
         "    # lossesarr = []\n",
         "    print(\"-----------------------------Начало тренировки---------------------------------------\")\n",
         "    num_epochs=10\n",
         "\n",
-        "    for epoch in range(num_epochs):\n",
-        "        train_one_epoch(model, optimizer, data_loader_train, device, epoch)\n",
+        "    for e in range(num_epochs):\n",
+        "    train_loss = 0.0\n",
+        "    correct = 0\n",
+        "    for data, labels in data_loader_train:\n",
+        "        # Transfer Data to GPU if available\n",
+        "        if torch.cuda.is_available():\n",
+        "            data, labels = data.cuda(), labels.cuda()\n",
+        "         \n",
+        "        # Clear the gradients\n",
+        "        optimizer.zero_grad()\n",
+        "        # Forward Pass\n",
+        "        target = model(data)\n",
+        "        # Find the Loss\n",
+        "        loss = criterion(target,labels)\n",
+        "        # Calculate gradients\n",
+        "        loss.backward()\n",
+        "        # Update Weights\n",
+        "        optimizer.step()\n",
+        "        # Calculate Loss\n",
+        "        train_loss += loss.item()\n",
+        "        correct += (target == labels).float().sum()\n",
         "\n",
-        "    print(\"-----------------------------Сохранение модели---------------------------------------\")\n",
-        "    torch.save(model.state_dict(), '/content/drive/MyDrive/model6.pth')"
+        "    accuracy = 100 * correct / len(dataset_train)\n",
+        "     \n",
+        "    valid_loss = 0.0\n",
+        "    correct_valid  = 0\n",
+        "    model.eval()     # Optional when not using Model Specific layer\n",
+        "    for data, labels in data_loader_test:\n",
+        "        # Transfer Data to GPU if available\n",
+        "        if torch.cuda.is_available():\n",
+        "            data, labels = data.cuda(), labels.cuda()\n",
+        "         \n",
+        "        # Forward Pass\n",
+        "        target = model(data)\n",
+        "        # Find the Loss\n",
+        "        loss = criterion(target,labels)\n",
+        "        # Calculate Loss\n",
+        "        valid_loss += loss.item()\n",
+        "        correct_valid += (target == labels).float().sum()\n",
+        "    valid_accuracy = 100 * correct_valid / len(dataset_test)\n",
+        "\n",
+        "    print(\"Accuracy train = {}\".format(accuracy))\n",
+        "    print(\"Accuracy valid = {}\".format(valid_accuracy))\n",
+        "    print(f'Epoch {e+1} \\t\\t Training Loss: {\\\n",
+        "    train_loss / len(trainloader)} \\t\\t Validation Loss: {\\\n",
+        "    valid_loss / len(validloader)}')\n",
+        "     \n",
+        "    if min_valid_loss > valid_loss:\n",
+        "        print(f'Validation Loss Decreased({min_valid_loss:.6f\\\n",
+        "        }--->{valid_loss:.6f}) \\t Saving The Model')\n",
+        "        min_valid_loss = valid_loss\n",
+        "         \n",
+        "        # Saving State Dict\n",
+        "        torch.save(model.state_dict(), 'saved_model.pth')\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "    # for epoch in range(num_epochs):\n",
+        "    #     train_one_epoch(model, optimizer, data_loader_train, device, epoch)\n",
+        "    # print(\"-----------------------------Сохранение модели---------------------------------------\")\n",
+        "    # torch.save(model.state_dict(), '/content/drive/MyDrive/model6.pth')"
       ],
       "metadata": {
         "colab": {
