--- a/lab_3.ipynb
+++ b/lab_3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOX+ue+LUGt8KxfkjnRRo55",
+      "authorship_tag": "ABX9TyN/9VsPeUArMSKLN9bqW3YQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 225,
+      "execution_count": 1,
       "metadata": {
         "id": "yM_jt2ArRIDr"
       },
@@ -51,15 +51,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "03CftpajRntT",
-        "outputId": "471a6571-c970-45d0-cd42-3f35ab6b533e"
+        "outputId": "682dc35f-d0f0-4990-f9ea-4d1bf07b95b9"
       },
-      "execution_count": 226,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -72,7 +72,7 @@
       "metadata": {
         "id": "L7uYOzF_Rj0i"
       },
-      "execution_count": 276,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -86,9 +86,9 @@
           "height": 235
         },
         "id": "hHv7VySKRlnM",
-        "outputId": "70e63354-beef-4e5e-f458-71edf0d8a56f"
+        "outputId": "38ace974-7cbd-4563-e297-6280517e4bbe"
       },
-      "execution_count": 277,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -119,7 +119,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-89b0a60d-0a70-4f65-98f8-b8a244c542a4\">\n",
+              "  <div id=\"df-0757000c-b780-4965-a56b-915aeef990f6\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -287,7 +287,7 @@
               "</table>\n",
               "<p>5 rows × 28 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-89b0a60d-0a70-4f65-98f8-b8a244c542a4')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0757000c-b780-4965-a56b-915aeef990f6')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -338,12 +338,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-89b0a60d-0a70-4f65-98f8-b8a244c542a4 button.colab-df-convert');\n",
+              "          document.querySelector('#df-0757000c-b780-4965-a56b-915aeef990f6 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-89b0a60d-0a70-4f65-98f8-b8a244c542a4');\n",
+              "          const element = document.querySelector('#df-0757000c-b780-4965-a56b-915aeef990f6');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -366,7 +366,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 277
+          "execution_count": 4
         }
       ]
     },
@@ -380,9 +380,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XbR_GiwsS8kh",
-        "outputId": "47fbd7e8-8553-4f55-8377-3e394a35e826"
+        "outputId": "35964751-924f-42ce-9da9-c3297bd00da9"
       },
-      "execution_count": 278,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -392,7 +392,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 278
+          "execution_count": 5
         }
       ]
     },
@@ -406,9 +406,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kev9ypTpTMJB",
-        "outputId": "bf66b547-9454-4032-a4b4-b71e739402f5"
+        "outputId": "ee67c375-a5ef-4e48-a2b9-05a646310084"
       },
-      "execution_count": 279,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -477,7 +477,7 @@
       "metadata": {
         "id": "cqVJh9smUCXx"
       },
-      "execution_count": 280,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -494,7 +494,7 @@
       "metadata": {
         "id": "p8O9zkfKbMTc"
       },
-      "execution_count": 283,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -504,13 +504,13 @@
       ],
       "metadata": {
         "id": "NHB7IN6q1_NA",
-        "outputId": "e4de8584-d406-4ca3-f4b6-eb39bea7a6f1",
+        "outputId": "6dda8eb8-1b12-4830-e41b-b54bea0edac1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
         }
       },
-      "execution_count": 284,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -534,7 +534,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7e7fe72d-6693-46bc-9a57-c45888bdbb1b\">\n",
+              "  <div id=\"df-979deaee-4754-4fd5-9c07-b89cb2424546\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -702,7 +702,7 @@
               "</table>\n",
               "<p>5 rows × 25 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7e7fe72d-6693-46bc-9a57-c45888bdbb1b')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-979deaee-4754-4fd5-9c07-b89cb2424546')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -753,12 +753,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-7e7fe72d-6693-46bc-9a57-c45888bdbb1b button.colab-df-convert');\n",
+              "          document.querySelector('#df-979deaee-4754-4fd5-9c07-b89cb2424546 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-7e7fe72d-6693-46bc-9a57-c45888bdbb1b');\n",
+              "          const element = document.querySelector('#df-979deaee-4754-4fd5-9c07-b89cb2424546');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -781,7 +781,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 284
+          "execution_count": 9
         }
       ]
     },
@@ -789,7 +789,7 @@
       "cell_type": "code",
       "source": [
         "from sklearn import linear_model, ensemble\n",
-        "linear_regression_model = linear_model.LinearRegression()\n",
+        "import numpy as np\n",
         "random_forest_model = ensemble.RandomForestClassifier()\n",
         "#все равно остались или nan или inf, поэтому убираем еще раз\n",
         "training_data = training_data[np.isfinite(training_data).all(1)]\n",
@@ -805,7 +805,7 @@
       "metadata": {
         "id": "S6T1_AelWT_R"
       },
-      "execution_count": 293,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -815,12 +815,12 @@
       ],
       "metadata": {
         "id": "VpgrR5aOFPZD",
-        "outputId": "9444c77d-d7fd-4c39-c14a-2b8b41c4acfe",
+        "outputId": "9c354411-c0d7-4f07-a8e9-449bd3196dcb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 286,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -830,7 +830,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 286
+          "execution_count": 12
         }
       ]
     },
@@ -841,12 +841,12 @@
       ],
       "metadata": {
         "id": "Xy1Y0d2oFge_",
-        "outputId": "ac3005be-878a-4f5a-8dd2-12c10886f6bd",
+        "outputId": "0d25eb35-3b53-4b52-f0f8-574adcba835f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 287,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -856,7 +856,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 287
+          "execution_count": 13
         }
       ]
     },
@@ -867,13 +867,13 @@
       ],
       "metadata": {
         "id": "L1nW625yF7Ji",
-        "outputId": "1a2b75ad-8ae6-4c25-eef7-12d0bcbc0b8e",
+        "outputId": "bccb8c14-a02a-4a69-c791-60c3f086ff25",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
         }
       },
-      "execution_count": 289,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -909,7 +909,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3b7e1473-324d-47df-8dd8-d8ddec078215\">\n",
+              "  <div id=\"df-558092e8-2232-4029-8791-36d46ab5ab18\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1221,7 +1221,7 @@
               "</table>\n",
               "<p>1106 rows × 24 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3b7e1473-324d-47df-8dd8-d8ddec078215')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-558092e8-2232-4029-8791-36d46ab5ab18')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1272,12 +1272,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-3b7e1473-324d-47df-8dd8-d8ddec078215 button.colab-df-convert');\n",
+              "          document.querySelector('#df-558092e8-2232-4029-8791-36d46ab5ab18 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-3b7e1473-324d-47df-8dd8-d8ddec078215');\n",
+              "          const element = document.querySelector('#df-558092e8-2232-4029-8791-36d46ab5ab18');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1300,7 +1300,33 @@
             ]
           },
           "metadata": {},
-          "execution_count": 289
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_points.shape"
+      ],
+      "metadata": {
+        "id": "8R-MaDZ_DQ5y",
+        "outputId": "20ddaf65-e946-42bc-d587-33ab77f4b55a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(282, 24)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
         }
       ]
     },
@@ -1311,17 +1337,16 @@
         "# # opponent - противник\n",
         "predictors = [\"venue\", \"opponent\",\"time\", \"day\"]\n",
         "\n",
-        "# linear_regression_model.fit(train_points[predictors], training_values)\n",
         "random_forest_model.fit(train_points[predictors], training_values)"
       ],
       "metadata": {
         "id": "hXWAsPXLFMdX",
-        "outputId": "bdbaaff7-1037-4d4d-d321-583e81c1423b",
+        "outputId": "1624ad8c-5d91-49db-b761-d6769e8485a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 303,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1331,20 +1356,19 @@
             ]
           },
           "metadata": {},
-          "execution_count": 303
+          "execution_count": 15
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# test_predictions_linear = linear_regression_model.predict(test_points[predictors])\n",
         "test_predictions_random_forest = random_forest_model.predict(test_points[predictors])"
       ],
       "metadata": {
         "id": "PzmGapsvmcfP"
       },
-      "execution_count": 304,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1355,13 +1379,13 @@
       ],
       "metadata": {
         "id": "6aQU5wO1zj7f",
-        "outputId": "6472b970-ef2f-4dc7-9dbf-bdd7a18425a0",
+        "outputId": "bc798d3d-42ec-4228-f832-9f7da2cc856b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
         }
       },
-      "execution_count": 305,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1369,12 +1393,12 @@
             "text/plain": [
               "predicted    0   1\n",
               "actual            \n",
-              "0          132  43\n",
-              "1           75  32"
+              "0          126  49\n",
+              "1           70  37"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-daf3edbe-a4f9-472e-9159-2f925e045044\">\n",
+              "  <div id=\"df-113ad9b7-feea-4729-82fe-51d5b186996f\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1406,18 +1430,18 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>132</td>\n",
-              "      <td>43</td>\n",
+              "      <td>126</td>\n",
+              "      <td>49</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>75</td>\n",
-              "      <td>32</td>\n",
+              "      <td>70</td>\n",
+              "      <td>37</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-daf3edbe-a4f9-472e-9159-2f925e045044')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-113ad9b7-feea-4729-82fe-51d5b186996f')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1468,12 +1492,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-daf3edbe-a4f9-472e-9159-2f925e045044 button.colab-df-convert');\n",
+              "          document.querySelector('#df-113ad9b7-feea-4729-82fe-51d5b186996f button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-daf3edbe-a4f9-472e-9159-2f925e045044');\n",
+              "          const element = document.querySelector('#df-113ad9b7-feea-4729-82fe-51d5b186996f');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1496,31 +1520,62 @@
             ]
           },
           "metadata": {},
-          "execution_count": 305
+          "execution_count": 17
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.metrics import accuracy_score,classification_report\n",
         "\n",
         "print(accuracy_score(testing_values, test_predictions_random_forest))"
       ],
       "metadata": {
         "id": "5mmJ1on6KLFr",
-        "outputId": "99e98792-55ec-4091-d482-3cb4fb115819",
+        "outputId": "2d6c8567-9676-4e73-fe13-0298df4ced40",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 306,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.5815602836879432\n"
+            "0.5780141843971631\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(classification_report(testing_values, test_predictions_random_forest))"
+      ],
+      "metadata": {
+        "id": "kswTBFjWC_2m",
+        "outputId": "6fb37dfb-90b2-40ca-9d47-3a9311950370",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.64      0.72      0.68       175\n",
+            "           1       0.43      0.35      0.38       107\n",
+            "\n",
+            "    accuracy                           0.58       282\n",
+            "   macro avg       0.54      0.53      0.53       282\n",
+            "weighted avg       0.56      0.58      0.57       282\n",
+            "\n"
           ]
         }
       ]
