Создано с помощью Colaboratory

--- a/lab_3.ipynb
+++ b/lab_3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/9VsPeUArMSKLN9bqW3YQ",
+      "authorship_tag": "ABX9TyOn4mV7BHFZ+O91Y+T5lVbV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1310,11 +1310,11 @@
         "test_points.shape"
       ],
       "metadata": {
-        "id": "8R-MaDZ_DQ5y",
-        "outputId": "20ddaf65-e946-42bc-d587-33ab77f4b55a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8R-MaDZ_DQ5y",
+        "outputId": "20ddaf65-e946-42bc-d587-33ab77f4b55a"
       },
       "execution_count": 21,
       "outputs": [
@@ -1529,44 +1529,23 @@
       "source": [
         "from sklearn.metrics import accuracy_score,classification_report\n",
         "\n",
-        "print(accuracy_score(testing_values, test_predictions_random_forest))"
-      ],
-      "metadata": {
-        "id": "5mmJ1on6KLFr",
-        "outputId": "2d6c8567-9676-4e73-fe13-0298df4ced40",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0.5780141843971631\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "print(\"Точность \" ,accuracy_score(testing_values, test_predictions_random_forest))\n",
         "print(classification_report(testing_values, test_predictions_random_forest))"
       ],
       "metadata": {
-        "id": "kswTBFjWC_2m",
-        "outputId": "6fb37dfb-90b2-40ca-9d47-3a9311950370",
+        "id": "5mmJ1on6KLFr",
+        "outputId": "a7382cfb-8931-4ec0-f1fa-9febe9183ee1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Точность  0.5780141843971631\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "           0       0.64      0.72      0.68       175\n",
