Создано с помощью Colaboratory

--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1Dn7N2kr5TlKRCRCP3t6bfA8zxvcmY9Wj",
-      "authorship_tag": "ABX9TyMeF81WjcMuVosZJczNEDrG",
+      "authorship_tag": "ABX9TyO8l+Syiuat2phLESqNBZ11",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +38,30 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1wZxOuwSZCB9",
+        "outputId": "6005fbe1-d830-4057-fb73-881a3f883dc8"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
       ]
     },
     {
